# equadiffGPU

./: Readme.md  download_thrust.sh
acc/: CMakeLists.txt  stencil.cc  stencil.hh
c++/: CMakeLists.txt  batch.sh  main.cpp  run.sh
cuda/: cuda.cu  cuda_func.cuh  run.sh
include/: definitions.inl  macros.h  operations.inl  params.hh  structargs.hh
omp/: CMakeLists.txt  stencil.cc  stencil.hh
thrust_cpu/: CMakeLists.txt  stencil_cpu.cc  stencil_cpu.hh
thrust_gpu/: CMakeLists.txt  GpusTopol.cuh  stencil.cu  stencil.cuh
